<resources>
    <string name="app_name">Examen-Menu-SQLite-Android-App</string>
    <string name="login">Log in</string>
    <string name="singup">Sing Up</string>
    <string name="logOut">Log Out</string>
    <string name="Clculatrice">Calculatrice</string>
    <string name="Temperature">Temperature</string>
    <string name="Afficher">Afficher</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Connect">Connect</string>
    <string name="name">Name</string>
    <string name="inscript">register</string>
    <string name="welcome">Welcome</string>
    <string name="error">*Email or Password is incorrect</string>

</resources>