<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/singUp"
        android:icon="@drawable/adduser"
        android:title="@string/singup"
        app:showAsAction="always" />
    <item
        android:id="@+id/Login"
        android:icon="@drawable/login"
        android:title="@string/login"
        app:showAsAction="always" />
    <item
        android:id="@+id/calcul"
        android:title="@string/Clculatrice"
        app:showAsAction="never" />
    <item
        android:id="@+id/temp"
        android:title="@string/Temperature"
        app:showAsAction="never" />
    <item
        android:id="@+id/afficher"
        android:title="@string/Afficher"
        app:showAsAction="never" />
    <item
        android:id="@+id/Logout"
        android:title="@string/logOut"
        app:showAsAction="never" />


</menu>