<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Antiquewhite"
    android:gravity="center_horizontal"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Antiquewhite"
        app:title=" " />

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bekind"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="50dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="100dp"
        android:background="@drawable/placeholder"

        />

    <ImageView
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_below="@id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="163dp"

        android:layout_marginEnd="164dp"
        android:background="@drawable/login2" />

    <EditText
        android:id="@+id/mail"
        style="@style/edit"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/password"
        style="@style/edit1"
        android:layout_below="@id/mail"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:text=" "
        android:visibility="gone"
        android:textColor="@color/Red" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Antiquewhite"
        android:text="@string/Connect"
        android:textColor="@color/Bleu" />


</RelativeLayout>